typo, final css changes for now

--- a/chau/public/css/index.css
+++ b/chau/public/css/index.css
@@ -72,6 +72,10 @@ nav {
     }
 }
 
+.collapsible-body {
+    background-color: #FDFDFD;
+}
+
 .warning, #cliff-left-data, #cliff-right-data, #cliff-front-left-data, #cliff-front-right-data, #bump-left-data, #bump-right-data, #light-bump-left-data, #light-bump-front-left-data, #light-bump-center-left-data, #light-bump-center-right-data, #light-bump-front-right-data, #light-bump-right-data {
     font-size: 2em;
     padding: 0 !important;
